--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -166,7 +166,7 @@ input, select, textarea {
 		margin: 0 0 2em 0;
 	}
 
-	h1 {
+	h1, h2 {
 		font-size: 2.75em;
 		font-weight: 700;
 		line-height: 1.3;
@@ -195,7 +195,7 @@ input, select, textarea {
 
 		}
 
-	h2, h3, h4, h5, h6 {
+	h3, h4, h5, h6 {
 		font-weight: 900;
 		line-height: 1.5;
 		margin: 0 0 2em 0;
@@ -208,7 +208,7 @@ input, select, textarea {
 		}
 
 	h2 {
-		font-size: 1.1em;
+		font-size: 2.0em;
 	}
 
 	h3 {
